--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -146,3 +146,10 @@ input[type=url]:focus {
   clear: both;
 }
 
+form input.ng-invalid.ng-dirty {
+  border-color: #FA787E;
+}
+
+form input.ng-valid.ng-dirty {
+  border-color: #78FA89;
+}
